# daena-app

./: .gitignore  CLAUDE_CODE_1CLICK_CHALLENGE_PROMPT.md  CLAUDE_CODE_ULTIMATE_AUDIT_PROMPT.md  DAENA_KITABI_MANIFESTO.md  DAENA_PITCH_DECK.md  DAENA_QUICKSTART_GUIDE.md  DAENA_SYSTEM_CARD.md  DAENA_V3_MASTER_PLAN.md  DAENA_YOUTUBE_SCRIPT.md  SETUP_GUIDE.md
.github/workflows/: build-all.yml  ci.yml
daena-app/: .gitignore  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  build.sh  build_sidecar.sh  iOS_DEPLOYMENT_PLAN.md  index.html  install_mac.sh  install_win.bat  package-lock.json  package.json  setup-mobile.sh  start.sh  vite.config.ts
daena-app/.github/workflows/: build-all.yml  build.yml  ci.yml
daena-app/backend/: .env.example  requirements.txt  server.py
daena-app/backend/config/: contracts.json  settings.json
daena-app/backend/data/: message_bus.jsonl  schedules.json  tasks.db  traces.db  vector_memory.db
daena-app/backend/scripts/: __init__.py  a2a_server.py  accessibility_layer.py  action_engine.py  adversarial_suite.py  agent_message_bus.py  agent_triggers.py  approval_queue.py  bootstrap.ps1  bootstrap.sh  brain.py  dag_planner.py  (+34 more)
daena-app/public/: manifest.json  sw.js
daena-app/src/: App.tsx  i18n.ts  index.css  vite-env.d.ts
daena-app/src-tauri/: Cargo.toml  tauri.conf.json
daena-app/src-tauri/capabilities/: default.json
daena-app/src-tauri/icons/: icon.icns
daena-app/src-tauri/src/: accelerator.rs  commands.rs  lib.rs  main.rs
daena-website/: index.html  package-lock.json  package.json
daena-website/src/: App.css  App.tsx  index.css
(+24 files in other folders)
